Added changes to hanok-gallery page

--- a/pages/hanok-gallery.html
+++ b/pages/hanok-gallery.html
@@ -143,14 +143,13 @@
                 <div class="gp10"><a href="../images/gp-10.jpg" data-fancybox="gallery" id="gp-10"><figure id="thumbnail-thirteen"></figure></a></div>
             </div>
             <div id="parent">
-                <div class="gp11"><a href="../images/gp-11.jpg" data-fancybox="gallery" id="gp-11"><figure id="thumbnail-fourteen"></figure></a></div>
+                <div class="gp11"><a href="../images/gp-11.jpg" data-fancybox="gallery"><figure id="thumbnail-fourteen"></figure></a></div>
             </div>
             <div id="parent">
                 <div class="gp12"><a href="../images/gp-12.jpg" data-fancybox="gallery" id="gp-12"><figure id="thumbnail-fifteen"></figure></a></div>
             </div>
 
             <footer id="gp"></footer>
-
         </main>
     </body>
 </html>
